--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches: [ main,development ]
+    branches: [ main, development ]
 
 env:
   AWS_REGION: us-east-1
@@ -11,20 +11,36 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
-    - uses: aws-actions/amazon-ecr-login@v1
-    - run: |
-        docker build -t mcp-server .
-        docker tag mcp-server:latest ${{ steps.login-ecr.outputs.registry }}/mcp-server:latest
-        docker push ${{ steps.login-ecr.outputs.registry }}/mcp-server:latest
-    - run: |
-        aws ssm send-command \
-        --instance-ids ${{ env.EC2_INSTANCE_ID }} \
-        --document-name "AWS-RunShellScript" \
-        --parameters 'commands=["/home/ec2-user/deploy.sh"]'
+      # 1️⃣ Checkout code
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # 2️⃣ Configure AWS credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      # 3️⃣ Login to Amazon ECR (IMPORTANT: id is required)
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+        id: login-ecr
+
+      # 4️⃣ Build, tag and push Docker image
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t mcp-server .
+          docker tag mcp-server:latest ${{ steps.login-ecr.outputs.registry }}/mcp-server:latest
+          docker push ${{ steps.login-ecr.outputs.registry }}/mcp-server:latest
+
+      # 5️⃣ Trigger deployment on EC2 via SSM
+      - name: Deploy on EC2
+        run: |
+          aws ssm send-command \
+            --instance-ids ${{ env.EC2_INSTANCE_ID }} \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["/home/ec2-user/deploy.sh"]'
